--- a/modules/web-control-center/nodejs/views/clusters.jade
+++ b/modules/web-control-center/nodejs/views/clusters.jade
@@ -32,7 +32,7 @@ block content
                 tbody
                     tr(ng-repeat='row in clusters track by row._id')
                         td.col-sm-6(ng-class='{active: row._id == selectedItem._id}')
-                            a(ng-click='selectItem(row)') {{$index + 1}}. {{row.name}}, {{row.discovery.kind | displayValue:discoveries:'Discovery not set'}}
+                            a(ng-click='selectItem(row)') {{$index + 1}}) {{row.name}}, {{row.discovery.kind | displayValue:discoveries:'Discovery not set'}}
         button.btn.btn-primary(ng-click='createItem()' ng-disabled='!create.template') &nbspAdd cluster
         label(style='margin-left: 15px; margin-right: 10px') Use template:
         button.btn.btn-default(ng-init='create.template = templates[0].value' ng-model='create.template' data-template='/select' data-placeholder='Choose cluster template' bs-options='item.value as item.label for item in templates' bs-select)
