# IGNITE-843 Bug fix: "logout" does not work.

--- a/modules/web-control-center/nodejs/views/includes/header.jade
+++ b/modules/web-control-center/nodejs/views/includes/header.jade
@@ -33,6 +33,6 @@ header.header(id='header')
                     script#user-dropdown(type='text/ng-template')
                         ul.dropdown-menu
                             li
-                                a(href='/rest/auth/logout') Log Out
+                                a(href='/logout') Log Out
                 li.nav-login(ng-show='!user')
                     a(ng-click='login()' href='#') Log In
