# IGNITE-843 Add ability to see user's configuration by admin.

--- a/modules/web-control-center/nodejs/views/admin/userList_content.html
+++ b/modules/web-control-center/nodejs/views/admin/userList_content.html
@@ -40,7 +40,7 @@
                             <span class="glyphicon glyphicon-remove" style="color: red"></span>
                         </a>
                         
-                        <a ng-href="../clusters" title="View user's configurations">
+                        <a ng-href="become?userId={{user._id}}" title="View user's configurations">
                             <span class="glyphicon glyphicon-eye-open"></span>
                         </a>
                     </td>
