--- a/modules/web-control-center/nodejs/views/includes/header.jade
+++ b/modules/web-control-center/nodejs/views/includes/header.jade
@@ -18,21 +18,21 @@ header.header(id='header')
     .container
         h1.navbar-brand
             a(href='/') Apache Ignite Web Configurator
-        .navbar-collapse.collapse(ng-controller='auth' ng-init='user = #{JSON.stringify(user)}')
-            ul.nav.navbar-nav(ng-controller='activeLink' ng-show='user')
+        .navbar-collapse.collapse(ng-controller='auth')
+            ul.nav.navbar-nav(ng-controller='activeLink' ng-show='loggedInUser')
                 li
                     a(ng-class="{active: isActive('/configuration')}" href='/configuration/clusters') Configuration
-                li(ng-show='user && user.admin')
+                li(ng-show='loggedInUser && loggedInUser.admin')
                     a(ng-class="{active: isActive('/admin')}" href='/admin/userList') Administration
                 //li
                 //    a(ng-class="{active: isActive('/sql')}" href='/sql') SQL
             ul.nav.navbar-nav.pull-right
-                li(ng-show='user')
-                    a.dropdown-toggle(data-toggle='dropdown' aria-expanded='true' bs-dropdown data-template='user-dropdown' data-placement='bottom-right') {{user.username}}
+                li(ng-show='loggedInUser')
+                    a.dropdown-toggle(data-toggle='dropdown' aria-expanded='true' bs-dropdown data-template='user-dropdown' data-placement='bottom-right') {{loggedInUser.username}}
                         span.caret
                     script#user-dropdown(type='text/ng-template')
                         ul.dropdown-menu
                             li
                                 a(href='/logout') Log Out
-                li.nav-login(ng-show='!user')
+                li.nav-login(ng-show='!loggedInUser')
                     a(ng-click='login()' href='#') Log In
