--- a/modules/web-control-center/nodejs/views/layout.jade
+++ b/modules/web-control-center/nodejs/views/layout.jade
@@ -15,7 +15,7 @@
     limitations under the License.
 
 doctype html
-html(ng-app='ignite-web-configurator', ng-init='loggedInUser = #{JSON.stringify(user)}')
+html(ng-app='ignite-web-control-center', ng-init='loggedInUser = #{JSON.stringify(user)}')
     head
         title= title
 
@@ -34,7 +34,7 @@ html(ng-app='ignite-web-configurator', ng-init='loggedInUser = #{JSON.stringify(
         block scripts
             script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js')
 
-            script(src='//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.9.3/lodash.min.js')
+            script(src='//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.min.js')
 
             script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js')
             script(src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-sanitize.js')
