--- a/modules/web-control-center/nodejs/views/admin/userList_content.html
+++ b/modules/web-control-center/nodejs/views/admin/userList_content.html
@@ -21,7 +21,7 @@
                     <th st-sort="email">Email</th>
                     <th st-sort="lastLogin">Last login</th>
                     <th st-sort="lastLogin">Admin</th>
-                    <th>Actions</th>
+                    <th colspan="2">Actions</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -35,12 +35,14 @@
                         <input type="checkbox" ng-disabled="user.adminChanging" ng-model="user.admin" 
                                ng-change="toggleAdmin(user)">
                     </td>
-                    <td>
-                        <a href ng-click="removeUser(user)" title="Remove user">
+                    <td width="1%">
+                        <a href ng-click="removeUser(user)" ng-show="user._id != loggedInUser._id" title="Remove user">
                             <span class="glyphicon glyphicon-remove" style="color: red"></span>
                         </a>
-                        
-                        <a ng-href="become?userId={{user._id}}" title="View user's configurations">
+                    </td>
+                    <td width="1%">
+                        <a ng-href="become?userId={{user._id}}" ng-show="user._id != loggedInUser._id"
+                           title="View user's configurations">
                             <span class="glyphicon glyphicon-eye-open"></span>
                         </a>
                     </td>
