IGNITE-843: Added copyrights to footer.

--- a/modules/web-control-center/nodejs/views/includes/footer.jade
+++ b/modules/web-control-center/nodejs/views/includes/footer.jade
@@ -18,3 +18,5 @@
     footer
         center
             p Apache Ignite Control Center, version 1.0.0
+            p © 2015 The Apache Software Foundation.
+            p Apache, Apache Ignite, the Apache feather and the Apache Ignite logo are trademarks of The Apache Software Foundation.
