# IGNITE-843 Implement "viewedUser" functionality.

--- a/modules/web-control-center/nodejs/public/stylesheets/style.less
+++ b/modules/web-control-center/nodejs/public/stylesheets/style.less
@@ -1029,3 +1029,14 @@ input.ng-dirty.ng-invalid {
   padding: 5px 5px;
 }
 
+.viewedUser {
+  display: inline;
+
+  padding: 6px;
+  margin: 7px;
+
+  border-radius: 4px;
+
+  background-color: #f8d5d8;
+
+}
