--- a/modules/web-control-center/nodejs/views/admin/userList_content.html
+++ b/modules/web-control-center/nodejs/views/admin/userList_content.html
@@ -41,7 +41,7 @@
                         </a>
                     </td>
                     <td width="1%">
-                        <a ng-href="become?userId={{user._id}}" ng-show="user._id != loggedInUser._id"
+                        <a ng-href="become?viewedUserId={{user._id}}" ng-show="user._id != loggedInUser._id"
                            title="View user's configurations">
                             <span class="glyphicon glyphicon-eye-open"></span>
                         </a>
