--- a/modules/web-control-center/nodejs/views/admin/index.jade
+++ b/modules/web-control-center/nodejs/views/admin/index.jade
@@ -11,10 +11,10 @@
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-extends ../layout
+extends ../templates/layout
 
 append scripts
-    script(src='/javascripts/controllers/adminController.js')
+    script(src='/admin-controller.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js')
 
 block container
