--- a/modules/web-control-center/nodejs/views/clients.jade
+++ b/modules/web-control-center/nodejs/views/clients.jade
@@ -14,7 +14,7 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 
-extends layout-sidebar
+extends templates/layout-sidebar
 block head
 block content
     .docs-header
@@ -23,4 +23,4 @@ block content
         hr
     .docs-body(ng-controller='clientsRouter')
 block body
-    script(src='/javascripts/controllers/clients.js')
+    script(src='/clients.js')
