--- a/modules/web-control-center/nodejs/views/index.jade
+++ b/modules/web-control-center/nodejs/views/index.jade
@@ -14,7 +14,7 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 
-extends layout
+extends templates/layout
 block container
     .row
         .docs-content
