--- a/modules/web-control-center/nodejs/views/persistence.jade
+++ b/modules/web-control-center/nodejs/views/persistence.jade
@@ -14,10 +14,10 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 
-extends layout-sidebar
+extends templates/layout-sidebar
 
 append scripts
-    script(src='/javascripts/controllers/persistences.js')
+    script(src='/persistences-controller.js')
 
 include includes/controls
 
