--- a/modules/web-control-center/nodejs/views/profile.jade
+++ b/modules/web-control-center/nodejs/views/profile.jade
@@ -14,7 +14,7 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 
-extends layout-sidebar
+extends templates/layout-sidebar
 
 block content
     .docs-header(ng-init='editableUser = #{JSON.stringify(filterUser(editableUser))}')
