IGNITE-843 Convert html to jade.

--- a/modules/web-control-center/nodejs/views/admin/index.jade
+++ b/modules/web-control-center/nodejs/views/admin/index.jade
@@ -18,4 +18,4 @@ append scripts
     script(src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js')
 
 block container
-    include userList_content.html
+    include users
