--- a/modules/web-control-center/nodejs/views/templates/layout-fluid.jade
+++ b/modules/web-control-center/nodejs/views/templates/layout-fluid.jade
@@ -17,6 +17,6 @@
 extends headers
 
 block main-container
-    .container.body-container
+    .container-fluid.body-container
         .main-content
             block container
