--- a/modules/web-control-center/nodejs/views/includes/header.jade
+++ b/modules/web-control-center/nodejs/views/includes/header.jade
@@ -24,8 +24,8 @@ header.header(id='header')
                     a(ng-class="{active: isActive('/configuration')}" href='/configuration/clusters') Configuration
                 li(ng-if='loggedInUser && loggedInUser.admin')
                     a(ng-class="{active: isActive('/admin')}" href='/admin') Administration
-                //li
-                //    a(ng-class="{active: isActive('/sql')}" href='/sql') SQL
+                li
+                    a(ng-class="{active: isActive('/sql')}" href='/sql') SQL
             ul.nav.navbar-nav.pull-right
                 li(ng-show='loggedInUser')
                     a.dropdown-toggle(data-toggle='dropdown' aria-expanded='true' bs-dropdown data-template='user-dropdown' data-placement='bottom-right') {{loggedInUser.username}}
