--- a/modules/web-control-center/nodejs/views/admin/userList.jade
+++ b/modules/web-control-center/nodejs/views/admin/userList.jade
@@ -17,7 +17,7 @@ append scripts
     script(src='/admin-controller.js')
 
 block container
-    .row(ng-controller='adminController')
+    .greedy.row(ng-controller='adminController')
         .docs-content
             .docs-header
                 h1 Users
@@ -43,7 +43,7 @@ block container
                             td
                                 span.small {{user.lastLogin | date:'medium'}}
                             td
-                                input(type='checkbox' ng-disabled='user.adminChanging || user._id == loggedInUser._id' 
+                                input(type='checkbox' ng-disabled='user.adminChanging || user._id == loggedInUser._id'
                                 ng-model='user.admin' ng-change='toggleAdmin(user)')
                             td(width='1%')
                                 a(ng-click='removeUser(user)' ng-show='user._id != loggedInUser._id' title='Remove user')
