--- a/modules/web-control-center/nodejs/views/sql/sql.jade
+++ b/modules/web-control-center/nodejs/views/sql/sql.jade
@@ -22,7 +22,7 @@ append css
     link(rel='stylesheet', href='/stylesheets/sql-console.css')
 
 block container
-    div(ng-controller='cacheViewerController')
+    div.greedy(ng-controller='cacheViewerController')
         h3 Sql console
 
         table#queryTable(cellpadding=0, cellspacing=0, ng-init='queryType = "sql"')
