IGNITE-843: WIP on User profile UI.

--- a/modules/web-control-center/nodejs/public/stylesheets/style.less
+++ b/modules/web-control-center/nodejs/public/stylesheets/style.less
@@ -794,6 +794,11 @@ label {
   margin-right: 4px;
 }
 
+.labelFormField {
+  float: left;
+  line-height: @input-height;
+}
+
 .stackTipField {
   float: right;
   line-height: @input-height;
